<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="absence_request_absence_days">Absence days</string>
    <string name="absence_request_absence_type">Absence type</string>
    <string name="absence_request_available_days">Available days</string>
    <string name="absence_request_button">Request</string>
    <string name="absence_request_current_status">Current status</string>
    <string name="absence_request_dates_placeholder" formatted="false">%s - %s</string>
    <string name="absence_request_days_absent_placeholder" formatted="false">Days absent: %d %s</string>
    <string name="absence_request_empty_list">No absences requested</string>
    <string name="absence_request_from">From</string>
    <string name="absence_request_loading_failed_message">Failed loading absence requests</string>
    <string name="absence_request_request_absence_title">Request Absence</string>
    <string name="absence_request_request_vacation">Request vacation</string>
    <string name="absence_request_status_placeholder">Status: %s</string>
    <string name="absence_request_title">Absence Request</string>
    <string name="absence_request_to">To</string>
    <string name="absence_request_type_dialog_title">Select absence type</string>
    <string name="absence_request_type_loading_failed_message">Failed loading absence request types</string>
    <string name="absence_request_type_uploading_failed">Failed creating absence request</string>
    <string name="absence_request_type_uploading_finished">Absence requested</string>
    <string name="add_comment_screen_add_failed">Comment upload failed</string>
    <string name="add_comment_screen_add_success">Comment uploaded</string>
    <string name="add_comment_screen_comment_add_button">Add</string>
    <string name="add_comment_screen_comment_hint_label">Enter the comment…</string>
    <string name="add_comment_screen_empty_list">No comments added</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_is_locked">Application is locked</string>
    <string name="app_name">W4 Field Service</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arcgisruntime_client_cert_dialog_button_positive">Continue</string>
    <string name="arcgisruntime_client_cert_dialog_message">The service has requested a client certificate to authenticate, which further requires a secure lockscreen. Closing this dialog will open an Android dialog where you can either cancel or change your security type, which will allow you to specify a certificate.</string>
    <string name="arcgisruntime_client_cert_dialog_title">Client Certificate Requested</string>
    <string name="arcgisruntime_created_by">Created by %1$s</string>
    <string name="arcgisruntime_created_by_day">Created by %1$s on %2$s at %3$s</string>
    <string name="arcgisruntime_created_by_full">Created by %1$s on %2$s at %3$s</string>
    <string name="arcgisruntime_created_by_hour">Created by %1$s an hour ago</string>
    <string name="arcgisruntime_created_by_hours">Created by %1$s %2$d hours ago</string>
    <string name="arcgisruntime_created_by_minute">Created by %1$s a minute ago</string>
    <string name="arcgisruntime_created_by_minutes">Created by %1$s %2$d minutes ago</string>
    <string name="arcgisruntime_created_by_seconds">Created by %1$s seconds ago</string>
    <string name="arcgisruntime_created_day">Created on %1$s at %2$s</string>
    <string name="arcgisruntime_created_full">Created on %1$s at %2$s</string>
    <string name="arcgisruntime_created_hour">Created an hour ago</string>
    <string name="arcgisruntime_created_hours">Created %1$d hours ago</string>
    <string name="arcgisruntime_created_minute">Created a minute ago</string>
    <string name="arcgisruntime_created_minutes">Created %1$d minutes ago</string>
    <string name="arcgisruntime_created_seconds">Created seconds ago</string>
    <string name="arcgisruntime_edited_by">Edited by %1$s</string>
    <string name="arcgisruntime_edited_by_day">Edited by %1$s on %2$s at %3$s</string>
    <string name="arcgisruntime_edited_by_full">Edited by %1$s on %2$s at %3$s</string>
    <string name="arcgisruntime_edited_by_hour">Edited by %1$s an hour ago</string>
    <string name="arcgisruntime_edited_by_hours">Edited by %1$s %2$d hours ago</string>
    <string name="arcgisruntime_edited_by_minute">Edited by %1$s a minute ago</string>
    <string name="arcgisruntime_edited_by_minutes">Edited by %1$s %2$d minutes ago</string>
    <string name="arcgisruntime_edited_by_seconds">Edited by %1$s seconds ago</string>
    <string name="arcgisruntime_edited_day">Edited on %1$s at %2$s</string>
    <string name="arcgisruntime_edited_full">Edited on %1$s at %2$s</string>
    <string name="arcgisruntime_edited_hour">Edited an hour ago</string>
    <string name="arcgisruntime_edited_hours">Edited %1$d hours ago</string>
    <string name="arcgisruntime_edited_minute">Edited a minute ago</string>
    <string name="arcgisruntime_edited_minutes">Edited %1$d minutes ago</string>
    <string name="arcgisruntime_edited_seconds">Edited seconds ago</string>
    <string name="arcgisruntime_error_coded_value_domain_value_not_found">Value is not one of the coded value domain values</string>
    <string name="arcgisruntime_error_field_must_be_numeric">Numeric field must have numeric value</string>
    <string name="arcgisruntime_error_invalid_geoelement">Invalid GeoElement</string>
    <string name="arcgisruntime_error_max_field_length">Value exceeds maximum field length of %1$d</string>
    <string name="arcgisruntime_error_null_value_not_allowed">Null value is not allowed for field named `%1$s`</string>
    <string name="arcgisruntime_error_out_of_range">Value is outside the valid range %1$s to %2$s</string>
    <string name="arcgisruntime_http_auth_request_dialog_button_negative">Cancel</string>
    <string name="arcgisruntime_http_auth_request_dialog_button_positive">Log in</string>
    <string name="arcgisruntime_http_auth_request_dialog_invalid_credential">Invalid username or password.</string>
    <string name="arcgisruntime_http_auth_request_dialog_password_hint">Password</string>
    <string name="arcgisruntime_http_auth_request_dialog_title">Authentication Required</string>
    <string name="arcgisruntime_http_auth_request_dialog_username_hint">Username</string>
    <string name="arcgisruntime_mapview_logo_string">Powered by <a color="#828282" href="http://www.esri.com/">Esri</a></string>
    <string name="arcgisruntime_na_CurrentLanguage">en</string>
    <string name="arcgisruntime_range_domain_string">%1$s to %2$s</string>
    <string name="arcgisruntime_self_signed_dialog_button_negative">Block</string>
    <string name="arcgisruntime_self_signed_dialog_button_positive">Trust</string>
    <string name="arcgisruntime_self_signed_dialog_mismatched_host">This server could not prove itself; its security certificate is from another domain. This may caused by a misconfiguration or an attacker intercepting your connection. Would you like to continue anyway?</string>
    <string name="arcgisruntime_self_signed_dialog_mismatched_title">Mismatched Hostname</string>
    <string name="calendar_overflow_menu_choose_day">Choose date</string>
    <string name="calendar_overflow_menu_one_day">1 day</string>
    <string name="calendar_overflow_menu_refresh">Refresh</string>
    <string name="calendar_overflow_menu_schedule">Schedule</string>
    <string name="calendar_overflow_menu_three_days">3 days</string>
    <string name="cancel">CANCEL</string>
    <string name="document_details_screen_title_label">File Details</string>
    <string name="download_offline_map_calculating_download_size">Calculating download size…</string>
    <string name="drawer_absence_request">Absence Request</string>
    <string name="drawer_asset_list">Asset List</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="drawer_create_work_order">Create Work Order</string>
    <string name="drawer_finalized_task_list">Finalized Tasks</string>
    <string name="drawer_offline_maps">Offline maps</string>
    <string name="drawer_routes">Routes</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_task_list">Task List</string>
    <string name="drawer_work_order_list">Work Orders</string>
    <string name="feature_filter_builder_title">Feature Filter Builder</string>
    <string name="filer_builder_create_filter_label">Add Filter</string>
    <string name="filter_apply_filter_button">Apply</string>
    <string name="filter_builder_empty_list">No filters added</string>
    <string name="filter_clear_filter_button">Clear</string>
    <string name="filter_save_filter_button">Save</string>
    <string name="key_about">key_about</string>
    <string name="key_advanced_settings">key_advanced_settings</string>
    <string name="key_debug_options">key_debug_options</string>
    <string name="key_notifications">key_notifications</string>
    <string name="key_offline_maps">key_offline_maps</string>
    <string name="offline_maps_description">To use maps in offline mode, start by downloading a base map</string>
    <string name="offline_maps_download_button">Download</string>
    <string name="offline_maps_downloaded_maps">Downloaded maps</string>
    <string name="offline_maps_no_maps_downloaded">No downloaded maps</string>
    <string name="offline_maps_no_offline_maps">No offline maps</string>
    <string name="pref_settings_about_summary">Application version</string>
    <string name="pref_settings_about_title">About</string>
    <string name="pref_settings_advanced_title">Advanced Settings</string>
    <string name="pref_settings_debug_options_summary">Options for developers</string>
    <string name="pref_settings_debug_options_title">Debug Options</string>
    <string name="pref_settings_notifications_title">Notifications</string>
    <string name="task_details_screen_title">Task</string>
    <string name="zoom_to_screen_title">Zoom to</string>
</resources>