<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/group" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_list" android:id="@id/tasksList" android:title="@string/drawer_task_list" />
        <item android:icon="@drawable/ic_assignment" android:id="@id/workOrderList" android:title="@string/drawer_work_order_list" />
        <item android:icon="@drawable/ic_create" android:id="@id/createWorkOrder" android:visible="true" android:title="@string/drawer_create_work_order" />
        <item android:icon="@drawable/ic_calendar_today" android:id="@id/absenceRequest" android:visible="false" android:title="@string/drawer_absence_request" />
        <item android:icon="@drawable/ic_check" android:id="@id/finalizedTasksList" android:visible="true" android:title="@string/drawer_finalized_task_list" android:iconTint="@color/black" />
        <item android:icon="@drawable/ic_directions" android:id="@id/routes" android:visible="true" android:title="@string/drawer_routes" />
        <item android:icon="@drawable/ic_calendar" android:id="@id/calendar" android:visible="true" android:title="@string/drawer_calendar" />
        <item android:icon="@drawable/ic_asset" android:id="@id/assets" android:visible="true" android:title="@string/drawer_asset_list" />
    </group>
    <group android:id="@id/group_settings" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_settings" android:id="@id/settings" android:visible="true" android:title="@string/drawer_settings" />
    </group>
</menu>