<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@id/task_details_navigation" app:startDestination="@id/taskDetails"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:label="@string/task_details_screen_title" android:name="net.gdi.w4.ui.tasks.details.TaskDetailsFragment" android:id="@id/taskDetails">
        <action android:id="@id/taskDetails_to_zoomTo" app:destination="@id/zoomTo" app:popUpToInclusive="false" />
        <action android:id="@id/taskDetails_to_documentDetails" app:destination="@id/documentDetails" app:popUpToInclusive="false" />
        <action android:id="@id/taskDetails_to_imageFragment" app:destination="@id/imageFragment" />
        <action android:id="@id/taskDetails_to_assetDetails" app:destination="@id/assetDetailsActivity" />
    </fragment>
    <fragment android:label="@string/document_details_screen_title_label" android:name="net.gdi.w4.ui.tasks.details.documents.base.details.DocumentDetailsFragment" android:id="@id/documentDetails">
        <argument android:name="documentId" app:argType="string" />
        <argument android:name="taskId" app:argType="long" />
        <argument android:name="editable" app:argType="boolean" />
        <argument android:name="apiDocument" android:defaultValue="@null" app:argType="net.gdi.w4.data.model.ApiDocument" app:nullable="true" />
        <action android:id="@id/documentDetails_to_imageFragment" app:destination="@id/imageFragment" />
    </fragment>
    <fragment android:label="@string/zoom_to_screen_title" android:name="net.gdi.w4.ui.tasks.details.map.base.zoomto.ZoomToFragment" android:id="@id/zoomTo" />
    <fragment android:label="@string/feature_filter_builder_title" android:name="net.gdi.w4.ui.tasks.details.map.base.filter.FeatureFilterBuilderFragment" android:id="@id/featureFilterBuilder" />
    <fragment android:label="@string/filer_builder_create_filter_label" android:name="net.gdi.w4.ui.tasks.details.map.base.filter.CreateFeatureFilterFragment" android:id="@id/createFeatureFilter" />
    <fragment android:label="" android:name="net.gdi.w4.ui.tasks.details.documents.base.details.image.ImageFragment" android:id="@id/imageFragment">
        <argument android:name="imagePath" app:argType="string" app:nullable="true" />
        <argument android:name="downloadUrl" app:argType="string" app:nullable="true" />
    </fragment>
    <activity android:name="net.gdi.w4.ui.assets.details.AssetDetailsActivity" android:id="@id/assetDetailsActivity">
        <argument android:name="assetId" app:argType="long" />
    </activity>
</navigation>