<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@id/task_details_navigation_finalized" app:startDestination="@id/finalizedTaskDetails"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:label="@string/task_details_screen_title" android:name="net.gdi.w4.ui.tasks.details.FinalizedTaskDetailsFragment" android:id="@id/finalizedTaskDetails">
        <action android:id="@id/finalizedTaskDetails_to_finalizedZoomTo" app:destination="@id/finalizedZoomTo" app:popUpToInclusive="false" />
        <action android:id="@id/action_finalizedTaskDetails_to_documentDetailsFragment" app:destination="@id/documentDetailsFragment" />
        <action android:id="@id/finalizedTaskDetails_to_imageFragment" app:destination="@id/imageFragment" />
        <action android:id="@id/finalizedTaskDetails_to_assetDetails" app:destination="@id/assetDetailsActivity" />
    </fragment>
    <fragment android:label="@string/zoom_to_screen_title" android:name="net.gdi.w4.ui.tasks.details.map.base.zoomto.ZoomToFragment" android:id="@id/finalizedZoomTo" />
    <fragment android:label="@string/feature_filter_builder_title" android:name="net.gdi.w4.ui.tasks.details.map.base.filter.FeatureFilterBuilderFragment" android:id="@id/finalizedFeatureFilterBuilder" />
    <fragment android:label="@string/filer_builder_create_filter_label" android:name="net.gdi.w4.ui.tasks.details.map.base.filter.CreateFeatureFilterFragment" android:id="@id/finalizedCreateFeatureFilter" />
    <fragment android:label="@string/document_details_screen_title_label" android:name="net.gdi.w4.ui.tasks.details.documents.base.details.DocumentDetailsFragment" android:id="@id/documentDetailsFragment">
        <argument android:name="documentId" app:argType="string" />
        <argument android:name="taskId" app:argType="long" />
        <argument android:name="editable" app:argType="boolean" />
        <argument android:name="apiDocument" android:defaultValue="@null" app:argType="net.gdi.w4.data.model.ApiDocument" app:nullable="true" />
        <action android:id="@id/finalizedDocumentDetails_to_imageFragment" app:destination="@id/imageFragment" />
    </fragment>
    <fragment android:label="" android:name="net.gdi.w4.ui.tasks.details.documents.base.details.image.ImageFragment" android:id="@id/imageFragment">
        <argument android:name="imagePath" app:argType="string" app:nullable="true" />
        <argument android:name="downloadUrl" app:argType="string" app:nullable="true" />
    </fragment>
    <activity android:name="net.gdi.w4.ui.assets.details.AssetDetailsActivity" android:id="@id/assetDetailsActivity">
        <argument android:name="assetId" app:argType="long" />
    </activity>
</navigation>