<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="14.0sp" android:textColor="@color/secondary_text" android:id="@id/description" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/offline_maps_description" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/offlineMapsRecycler" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/description" />
    <TextView android:gravity="center" android:id="@id/emptyOfflineMapsView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/offline_maps_no_offline_maps" app:layout_constraintBottom_toTopOf="@id/downloadedMapDescription" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/description" />
    <TextView android:textSize="14.0sp" android:textColor="@color/secondary_text" android:id="@id/downloadedMapDescription" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/offline_maps_downloaded_maps" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/offlineMapsRecycler" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/downloadedMapsRecycler" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/downloadedMapDescription" />
    <TextView android:gravity="center" android:id="@id/emptyDownloadedMapsView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/offline_maps_no_maps_downloaded" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/downloadedMapDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>