<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:padding="16.0dip" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/filter_item_text_size" android:textColor="@color/primary_text" android:id="@id/currentStatus" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/absence_request_current_status" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/currentStatusDivider" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginTop="8.0dip" app:layout_constraintTop_toBottomOf="@id/currentStatus" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/availableDaysContainer" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toStartOf="@id/absenceDaysContainer" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/currentStatusDivider">
        <TextView android:textSize="14.0sp" android:textColor="@color/secondary_text" android:id="@id/availableDays" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/absence_request_available_days" />
        <TextView android:textSize="24.0sp" android:textColor="@color/primary_text" android:id="@id/availableDaysPlaceholder" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/absenceDaysContainer" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toEndOf="@id/availableDaysContainer" app:layout_constraintTop_toBottomOf="@id/currentStatusDivider">
        <TextView android:textSize="14.0sp" android:textColor="@color/secondary_text" android:id="@id/absenceDays" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/absence_request_absence_days" />
        <TextView android:textSize="24.0sp" android:textColor="@color/primary_text" android:id="@id/absenceDaysPlaceholder" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView android:textSize="@dimen/filter_item_text_size" android:textColor="@color/primary_text" android:id="@id/requestVacation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/absence_request_request_vacation" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/availableDaysContainer" />
    <View android:id="@id/requestVacationDivider" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginTop="8.0dip" app:layout_constraintTop_toBottomOf="@id/requestVacation" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/requestVacationContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="32.0dip" android:paddingEnd="32.0dip" app:layout_constraintTop_toBottomOf="@id/requestVacationDivider">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/absenceTypeContainer" android:background="@drawable/absence_input_background" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@color/secondary_text" android:id="@id/absenceType" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/absence_request_absence_type" />
            <TextView android:textSize="20.0sp" android:textColor="@color/primary_text" android:id="@id/absenceTypePlaceholder" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/fromContainer" android:background="@drawable/absence_input_background" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@color/secondary_text" android:id="@id/fromDate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/absence_request_from" />
            <TextView android:textSize="20.0sp" android:textColor="@color/primary_text" android:id="@id/fromDatePlaceholder" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/toContainer" android:background="@drawable/absence_input_background" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <TextView android:textSize="14.0sp" android:textColor="@color/secondary_text" android:id="@id/toDate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/absence_request_to" />
            <TextView android:textSize="20.0sp" android:textColor="@color/primary_text" android:id="@id/toDatePlaceholder" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton android:textColor="@color/white" android:id="@id/requestButton" android:background="@drawable/button_positive_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:minWidth="100.0dip" android:text="@string/absence_request_button" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/requestVacationContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>