<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar android:layout_gravity="center_horizontal" android:id="@id/loadingIndicator" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/filtersList" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" app:layout_constraintBottom_toTopOf="@id/toolbar" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:gravity="center" android:id="@id/emptyFiltersView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/filter_builder_empty_list" />
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" android:elevation="4.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <TextView android:id="@id/applyFilters" android:text="@string/filter_apply_filter_button" style="@style/style_bottom_action_text" />
        <TextView android:id="@id/clearFilters" android:text="@string/filter_clear_filter_button" style="@style/style_bottom_action_text" />
        <TextView android:id="@id/saveFilters" android:text="@string/filter_save_filter_button" style="@style/style_bottom_action_text" />
    </androidx.appcompat.widget.Toolbar>
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@id/fab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_bottom_task_details_fab" android:src="@drawable/ic_add" android:layout_marginEnd="@dimen/margin_end_task_details_fab" app:backgroundTint="@color/background_color_task_details_fab" app:fabSize="normal" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:tint="@color/white" />
    <FrameLayout android:id="@id/creteFilterContainer" android:background="@color/white" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_margin="16.0dip" android:elevation="3.0dip" app:layout_constraintBottom_toTopOf="@id/toolbar" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>