<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.esri.arcgisruntime.mapping.view.MapView android:id="@id/previewMapView" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/estimatedFileSizeView" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="16.0sp" android:textColor="@color/secondary_text" android:id="@id/estimatedFileSizeView" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/download_offline_map_calculating_download_size" android:textAlignment="center" app:layout_constraintBottom_toTopOf="@id/cancelButton" app:layout_constraintTop_toBottomOf="@id/previewMapView" />
    <androidx.appcompat.widget.AppCompatButton android:textColor="@color/red" android:id="@id/cancelButton" android:background="@drawable/button_negative_background" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/cancel" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/downloadButton" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/estimatedFileSizeView" app:layout_constraintVertical_chainStyle="spread" />
    <androidx.appcompat.widget.AppCompatButton android:enabled="false" android:textColor="@color/white" android:id="@id/downloadButton" android:background="@drawable/button_positive_background" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/offline_maps_download_button" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/cancelButton" app:layout_constraintTop_toBottomOf="@id/estimatedFileSizeView" />
</androidx.constraintlayout.widget.ConstraintLayout>